test: add shouldCalculateTheRightAverage3()